Fix spacing for laptop and phone

--- a/src/App.css
+++ b/src/App.css
@@ -231,9 +231,10 @@
   flex-direction: column;
   justify-content: 'space-evenly';
   align-items: 'center';
-  padding: 4rem 6rem;
+  padding: 3rem 6rem;
   border-radius: 25px;
-  margin-top: 8rem;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
   min-width: 12rem;
   max-width: 46rem;
   color: black;
@@ -253,6 +254,12 @@
   .landing-box {
     padding: 1rem 6rem;
     border-radius: 15px;
+  }
+}
+
+@media screen and (min-height: 900px) {
+  .landing-box {
+    margin-top: 8rem;
   }
 }
 
